--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,16 +1,44 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html {
   font-size: 10px;
 }
 
 footer {
-  height: 10rem;
+  padding: 3rem;
   background-color: #bbb;
 
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+
+  font-size: 1.6rem;
+}
+
+footer ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.footer_info-area {
+  display: flex;
+  flex-direction: column;
 }
 
 footer ul li {
   list-style: none;
+}
+
+ul li:first-child {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+ul li:not(:first-child) {
+  margin-left: 1rem;
 }
