--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,39 @@ html {
   font-size: 10px;
 }
 
+.cabecalho {
+  height: 50vh;
+  background: url(../assets/catioro.jpg);
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 2rem 5rem 0 5rem;
+}
+
+.link {
+  text-decoration: none;
+  border: solid 2px;
+  border-radius: 200px;
+  font-size: 36px;
+  padding: 10px;
+  background-color: gray;
+  color: black;
+}
+
+.titulo {
+  font-size: 45px;
+  font-weight: bold;
+}
+
+.botao__compra {
+  border: solid 2px;
+  border-radius: 5px;
+  width: 500%;
+}
+
 footer {
   padding: 3rem;
   background-color: #bbb;
