Ajuste no footer

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,7 +46,7 @@ footer {
   background-color: #bbb;
 
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: space-evenly;
 
   font-size: 1.6rem;
